// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscription deserializes 1`] = `
Object {
  "displayName": "Foo!",
  "email": "foo@example.com",
  "messageType": 13,
  "readFrequency": 0.2,
}
`;

exports[`subscription deserializes with avatar 1`] = `
Object {
  "avatar": Object {
    "type": "avatar",
    "url": "AVA_URL",
  },
  "displayName": "Foo!",
  "email": "foo@example.com",
  "messageType": 13,
  "readFrequency": 0.2,
}
`;

exports[`subscription deserializes with monogram 1`] = `
Object {
  "displayName": "Foo!",
  "email": "foo@example.com",
  "messageType": 13,
  "monogram": Object {
    "color": "#000",
    "letters": "MG",
  },
  "readFrequency": 0.2,
}
`;
